# platform

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: init-databases.sh
services/ai-engine/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
services/ai-engine/ai_engine/: config.py  inbox_client.py  main.py  mock_ai.py
services/ai-engine/ai_engine/router/: process.py
services/auth-service/: .dockerignore  AGENTS.md  Dockerfile  README.md  settings.gradle.kts
services/auth-service/app/: build.gradle.kts
services/auth-service/docs/: api.md  architecture.md  running.md  testing.md
services/auth-service/gradle/: libs.versions.toml
services/auth-service/scripts/: concurrency-test.sh  e2e-test.sh
services/channel-adapter/: AGENTS.md  Dockerfile  README.md  settings.gradle.kts
services/channel-adapter/app/: build.gradle.kts
services/channel-adapter/gradle/: libs.versions.toml
services/channel-adapter/scripts/: e2e-test.sh
services/inbox-service/: AGENTS.md  Dockerfile  README.md  settings.gradle.kts
services/inbox-service/app/: build.gradle.kts
services/inbox-service/gradle/: libs.versions.toml
services/web/: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
services/web/src/: proxy.ts
services/web/src/app/: globals.css  layout.tsx  page.tsx
services/web/src/app/(dashboard)/: layout.tsx
services/web/src/components/admin/: admin-login-form.tsx  admin-sidebar.tsx  business-actions.tsx
(+255 files in other folders)
