[tool.poetry]
name = "ai_engine"
version = "0.1.0"
package-mode = false
description = ""
authors = ["tariqamarneh <tariqs.naser@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.42.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"